--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "arrowParens": "avoid",
-  "printWidth": 200
+  "arrowParens": "avoid"
 }
